[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures = "0.3.31"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
